# AlwaysOnNumLock

./: CMakeLists.txt  README.md  loop_ver.c  main.c
docs/: README_zh_CN.md
